firstName, lastName -> name; station -> workplace
